[gd_scene load_steps=10 format=3 uid="uid://d37ch1eyj5n5i"]

[ext_resource type="Script" uid="uid://bjigymqnd04dk" path="res://script/weapon.gd" id="1_d466i"]
[ext_resource type="Texture2D" uid="uid://xybxcbbonked" path="res://assest/weaponR1.png" id="1_iqy87"]
[ext_resource type="PackedScene" uid="uid://cxtaq1i3u3wnm" path="res://scenes/bullet.tscn" id="2_pr5e5"]
[ext_resource type="Texture2D" uid="uid://dpurwmvhjpmmw" path="res://assest/muzzle.png" id="4_s7ojo"]

[sub_resource type="Animation" id="Animation_e4mdo"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_5duhf"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.0333333, 0.1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.0333333, 0.1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3m6l"]
_data = {
&"RESET": SubResource("Animation_e4mdo"),
&"shoot": SubResource("Animation_5duhf")
}

[sub_resource type="Curve" id="Curve_dfsp3"]
_data = [Vector2(0.00392157, 0.678779), 0.0, 0.0, 0, 0, Vector2(0.990196, 0.267805), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_2sme0"]
offsets = PackedFloat32Array(0, 0.559574, 1)
colors = PackedColorArray(0.913725, 0, 0, 1, 1, 0.984314, 0.317647, 1, 0.329412, 1, 1, 1)

[node name="Weapon" type="Node2D"]
script = ExtResource("1_d466i")
bullet = ExtResource("2_pr5e5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.046)
texture = ExtResource("1_iqy87")
region_enabled = true
region_rect = Rect2(430.937, 1105.46, 1328.82, 728.35)

[node name="FirePoint" type="Node2D" parent="Sprite2D"]
position = Vector2(720, -43.478)
scale = Vector2(20, 21.7391)

[node name="MuzzleFlash" type="CPUParticles2D" parent="Sprite2D"]
position = Vector2(800, -43.4779)
emitting = false
amount = 1
texture = ExtResource("4_s7ojo")
lifetime = 0.06
one_shot = true
gravity = Vector2(0, 0)
scale_amount_min = 0.01
scale_amount_max = 0.01

[node name="BulletShell" type="CPUParticles2D" parent="Sprite2D"]
scale = Vector2(20, 21.7391)
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
direction = Vector2(0, -1)
initial_velocity_min = 125.37
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 6.0
color = Color(0.421023, 0.661914, 0.8759, 1)

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 0.16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r3m6l")
}

[node name="Line2D" type="Line2D" parent="."]
top_level = true
width = 4.0
width_curve = SubResource("Curve_dfsp3")
gradient = SubResource("Gradient_2sme0")

[connection signal="timeout" from="CoolDownTimer" to="." method="_on_cool_down_timer_timeout"]
